add a web UI, but bug remians: cant continously generate video

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,7 @@ dependencies = [
     "librosa",
     "openai-whisper",
     "python-dotenv",
+    "fastapi",
+    "uvicorn[standard]",
+    "python-multipart",
 ]
