change the font to Times New Roman, no shadow, and lyrics are splited by comma, font size is 10, place subtitle in the very center.

--- a/.env.example
+++ b/.env.example
@@ -38,9 +38,15 @@ VIDEO_HEIGHT=1920
 FPS=30
 
 # ===== 字幕样式 =====
-# 字幕字号
-FONT_SIZE=18
+# 字幕字体（默认新罗马）
+FONT_NAME=Times New Roman
+# 固定字幕字号（建议 10；想更小可改 9 或 8）
+FONT_SIZE=10
+# 是否自动缩小字号以尽量单行显示（true/false）
+AUTO_FIT_FONT_SIZE=false
 # 字幕主颜色（ASS 格式，&H00FFFFFF = 白色）
 FONT_COLOR=&H00FFFFFF
-# 字幕描边颜色（ASS 格式，&H00000000 = 黑色）
+# 字幕描边颜色（当前默认不启用描边，ASS 格式）
 OUTLINE_COLOR=&H00000000
+# 是否按逗号分句逐句显示（true/false）
+SPLIT_BY_COMMA=true
