add cli interaction

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ output/
 # 素材目录（视频、音频、字幕体积大，不上传）
 raw_materials/
 
+# 媒体文件（音频、视频、字幕体积大，不上传）
+*.mp3
+*.mp4
+*.srt
+
 # 模型缓存（Whisper 模型文件很大）
 *.pt
 
