--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ requires-python = ">=3.10"
 dependencies = [
     "librosa",
     "openai-whisper",
+    "prompt-toolkit",
     "python-dotenv",
+    "rich",
+    "typer",
 ]
